2006-02-11  Brian Granger <ellisonbg@gmail.com>

        * ChangeLog: Started the ChangeLog for ipython1.